--- a/Macha/styles.css
+++ b/Macha/styles.css
@@ -99,7 +99,7 @@ border-width: 0px;;
     cursor: default;
     font-weight: 20px;
    height: 30px;
-   width: 500px; 
+   width: 800px; 
    
 }
 .text1{
@@ -176,6 +176,8 @@ border-width: 0px;;
       margin-left:470px ;
       margin-top: -50px;
       position: absolute;
+      height: 100px;
+      display: inline-block;
       
       
       
@@ -946,7 +948,7 @@ border-width: 0px;;
     margin-top: 461px;
     margin-left: -3px;
     width:350px;
-    height:80%;
+    
 }
 .tech img{
     margin-left:20px;
